# File-Cutter

./: .gitignore  README.md  launcher.py  pyproject.toml  requirements.txt  setup.cfg
Generated-texts/: generated_text_000001.txt  generated_text_000002.txt  generated_text_000003.txt  generated_text_000004.txt  generated_text_000005.txt  generated_text_000006.txt  generated_text_000007.txt  generated_text_000008.txt  generated_text_000009.txt  generated_text_000010.txt  generated_text_000011.txt  generated_text_000012.txt  generated_text_000013.txt  generated_text_000014.txt  generated_text_000015.txt  generated_text_000016.txt  generated_text_000017.txt  generated_text_000018.txt  generated_text_000019.txt  generated_text_000020.txt  generated_text_000021.txt  generated_text_000022.txt  generated_text_000023.txt  generated_text_000024.txt  generated_text_000025.txt  generated_text_000026.txt  generated_text_000027.txt  generated_text_000028.txt  generated_text_000029.txt  generated_text_000030.txt  generated_text_000031.txt  generated_text_000032.txt  generated_text_000033.txt  generated_text_000034.txt  generated_text_000035.txt  generated_text_000036.txt  generated_text_000037.txt  generated_text_000038.txt  generated_text_000039.txt  generated_text_000040.txt  (+731 more)
mock_txt_files/: mock_100kb_001.txt  mock_100kb_002.txt  mock_100kb_003.txt  mock_100kb_004.txt  mock_100kb_005.txt  mock_100kb_006.txt  mock_100kb_007.txt  mock_100kb_008.txt  mock_100kb_009.txt  mock_100kb_010.txt  mock_100kb_011.txt  mock_100kb_012.txt  mock_100kb_013.txt  mock_100kb_014.txt  mock_100kb_015.txt  mock_100kb_016.txt  mock_100kb_017.txt  mock_100kb_018.txt  mock_100kb_019.txt  mock_100kb_020.txt  mock_100kb_021.txt  mock_100kb_022.txt  mock_100kb_023.txt  mock_100kb_024.txt  mock_100kb_025.txt  mock_100kb_026.txt  mock_100kb_027.txt  mock_100kb_028.txt  mock_100kb_029.txt  mock_100kb_030.txt  (+80 more)
(+27 files in other folders)
