[build-system]
requires = [
    "setuptools>=42,<60; python_version < '3.7'",
    "setuptools>=42,<69; python_version >= '3.7' and python_version < '3.8'",
    "setuptools>=69; python_version >= '3.8'",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
