[metadata]
name = file-configurator
version = 0.1.0
description = Python Qt utility for splitting TXT input into generated text files.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses>=0.8; python_version < "3.7"
    PySide2>=5.15,<5.16; python_version < "3.9"
    PySide6>=6.7; python_version >= "3.9"
    scipy>=1.5,<1.6; python_version < "3.7"
    scipy>=1.7,<1.8; python_version >= "3.7" and python_version < "3.8"
    scipy>=1.10,<1.11; python_version >= "3.8" and python_version < "3.9"
    scipy>=1.11; python_version >= "3.9"

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6,<8; python_version < "3.8"
    pytest>=8; python_version >= "3.8"

[options.entry_points]
console_scripts =
    file-configurator = file_configurator.app:main
